# qmc3

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  input.json  qmc1d  qmc3.sublime-project  qmc3.sublime-workspace
cmake/: init.cmake  userDefinitions.h.in
dmc/: CMakeLists.txt  accumulators.h  geometry.h  pairCorrelation.h  potentialFactory.h  tools.h  traits.h
dmc/moves/: move.h
examples/: dipolarMixture.json  freeFermi.json  harmonicOscillator.json  unitaryFermi.json
examples/pimc/: mixture.json
pimc/: CMakeLists.txt  action.cpp  action.h  hdf5IO.cpp  hdf5IO.h  moves.cpp  moves.h  pimc.cpp  pimc.json  pimcConfigurations.cpp  pimcConfigurations.h  pimcDriver.cpp  pimcDriver.h  pimcMoves.h  pimcObservables.cpp  pimcObservables.h  pimcObservablesFactory.cpp  pimcObservablesFactory.h  pimcPotentials.h  scratch.json  toolsPimc.cpp  toolsPimc.h  toolsPimcTest.cpp  toolsPimcTest.h  towerSampler.h
python-tools/: #configure.py#  #potentials.py#  .#potentials.py  anal3.py  configurations.py  configure.py  gaussianPotential.py  jastrow.py  jastrow2.py  jastrowv1.py  myExceptions.py  parameters.py  tools.py
python-tools/freeGas/: freeGas.ipynb
python-tools/freeGas/.ipynb_checkpoints/: freeGas-checkpoint.ipynb
python-tools/pimc/: Untitled.ipynb  configurations.py  convertToPDB.py  test.py  testFree.py
python-tools/pimc/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  test-checkpoint.py
python-tools/pimc/dash/: app.py
python-tools/pimc/notebboks/: Untitled.ipynb  app.py
python-tools/pimc/notebboks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
src/: #traits.h#  abstractFactory.cpp  abstractFactory.h  accumulators.h  branching.cpp  branching.h  correlationEstimator.cpp  correlationEstimator.h  current_test.cpp  dmcDriver.cpp  dmcDriver.h  driver.cpp  driver.h  energy.cpp  energy.h  estimatorCollection.cpp  estimatorCollection.h  estimators.cpp  estimators.h  estimatorsFactory.cpp  estimatorsFactory.h  factory.cpp  factory.h  geometry.cpp  geometry.h  geometryPMC.cpp  geometryPMC.h  harmonicPotential.h  hyperRadius.cpp  hyperRadius.h  initializer.cpp  initializer.h  input.h  main.cpp  metropolis.cpp  metropolis.h  observables.h  optimizationObservables.h  orbitals.cpp  orbitals.h  (+30 more)
src/moves/: dmcMoves.cpp  vmcMoves.cpp
src/wavefunction/: accumulators.h  hardSphere.h  jastrowWavefunctionOneBody.h  jastrowWavefunctionThreeBody.cpp  jastrowWavefunctionThreeBody.h  jastrowWavefunctionTwoBody.h  productWavefunction.cpp  productWavefunction.h  slaterDeterminant.cpp  slaterDeterminant.h  wavefunction.cpp  wavefunction.h  wavefunctionFactory.h
src/wavefunction/jastrows/: jastrow.h  jastrowGaussGauss.cpp  jastrowGaussGauss.h  jastrowHardSphereGauss.cpp  jastrowHardSphereGauss.h  jastrowSpline.cpp  jastrowSpline.h  jastrowSquareWell.cpp  jastrowSquareWell.h  jastrow_delta.cpp  jastrow_delta.h
tst/: CMakeLists.txt  dmc-test.cpp  jastrow-test.cpp  parameters-test.cpp  pimc-test.cpp  ptools-test.cpp  wavefunction-test.cpp
